--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
     "script": "ts-node scripts",
     "build": "graph build",
     "pre:codegen:polygon": "rimraf types && yarn script template --deployment matic",
-    "codegen:polygon": "graph codegen --output-dir ./types",
-    "deploy:polygon": "graph deploy --node https://api.thegraph.com/deploy/ edoapp/clipper-polygon --debug"
+    "pre:codegen:moonbase": "rimraf types && yarn script template --deployment moonbase",
+    "codegen": "graph codegen --output-dir ./types",
+    "deploy:polygon": "graph deploy --node https://api.thegraph.com/deploy/ edoapp/clipper-polygon --debug",
+    "deploy:moonbase": "graph deploy --node https://api.thegraph.com/deploy/ edoapp/clipper-moonbase-alpha --debug"
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "0.21.0",
