--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "build": "graph build",
     "pre:codegen:polygon": "rimraf types && yarn script template --deployment matic",
     "pre:codegen:moonbase": "rimraf types && yarn script template --deployment moonbase",
+    "pre:codegen:optimism": "rimraf types && yarn script template --deployment optimism",
     "codegen": "graph codegen --output-dir ./types",
     "deploy:polygon": "graph deploy --node https://api.thegraph.com/deploy/ edoapp/clipper-polygon --debug",
-    "deploy:moonbase": "graph deploy --node https://api.thegraph.com/deploy/ edoapp/clipper-moonbase-alpha --debug"
+    "deploy:moonbase": "graph deploy --node https://api.thegraph.com/deploy/ edoapp/clipper-moonbase-alpha --debug",
+    "deploy:optimism": "graph deploy --node https://api.thegraph.com/deploy/ edoapp/clipper-optimism --debug"
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "0.21.0",
