--- a/templates/subgraph.yml
+++ b/templates/subgraph.yml
@@ -30,6 +30,8 @@ dataSources:
           handler: handleDeposited
         - event: Withdrawn(indexed address,uint256,uint256)
           handler: handleWithdrawn
+        - event: AssetWithdrawn(indexed address,uint256,indexed address,uint256)
+          handler: handleSingleAssetWithdrawn
         - event: Swapped(indexed address,indexed address,indexed address,uint256,uint256,bytes)
           handler: handleSwapped
       file: ./src/mapping.ts
