--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "pre:codegen:moonbeam": "rimraf types && yarn script template --deployment moonbeam",
     "pre:codegen:ethereum": "rimraf types && yarn script template --deployment ethereum",
     "codegen": "graph codegen --output-dir ./types",
-    "deploy:polygon": "graph deploy --node https://api.thegraph.com/deploy/ edoapp/clipper-polygon --debug",
+    "deploy:polygon": "graph deploy --node https://api.thegraph.com/deploy/ edoapp/old-clipper-polygon --debug",
     "deploy:moonbase": "graph deploy --node https://api.thegraph.com/deploy/ edoapp/clipper-moonbase-alpha --debug",
     "deploy:optimism": "graph deploy --node https://api.thegraph.com/deploy/ edoapp/clipper-optimism --debug",
-    "deploy:moonbeam": "graph deploy --node https://api.thegraph.com/deploy/ edoapp/clipper-moonbeam --debug",
+    "deploy:moonbeam": "graph deploy --node https://api.thegraph.com/deploy/ edoapp/old-clipper-moonbeam --debug",
     "deploy:ethereum": "graph deploy --node https://api.thegraph.com/deploy/ edoapp/clipper-mainnet --debug"
   },
   "dependencies": {
