Fix permit router deposits

--- a/templates/subgraph.yml
+++ b/templates/subgraph.yml
@@ -34,6 +34,8 @@ dataSources:
           handler: handleSingleAssetWithdrawn
         - event: Swapped(indexed address,indexed address,indexed address,uint256,uint256,bytes)
           handler: handleSwapped
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleTransfer
       file: ./src/mapping.ts
   - name: ClipperCove
     kind: ethereum/contract
