Update arbitrum exchange

--- a/templates/subgraph.yml
+++ b/templates/subgraph.yml
@@ -69,3 +69,69 @@ dataSources:
         - event: CoveWithdrawn(indexed address,indexed address,uint256,uint256)
           handler: handleCoveWithdrawn
       file: ./src/coveMapping.ts
+  - name: OldClipperDirectExchange
+    kind: ethereum/contract
+    network: arbitrum-one
+    source:
+      address: '0xe7b0ce0526fbe3969035a145c9e9691d4d9d216c'
+      abi: ClipperDirectExchange
+      startBlock: 30861559
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      entities:
+        - Deposited
+        - Withdrawn
+        - Swapped
+      abis:
+        - name: ClipperDirectExchange
+          file: ./abis/ClipperDirectExchange.json
+        - name: ERC20
+          file: ./abis/ERC20.json
+        - name: AggregatorV3Interface
+          file: ./abis/AggregatorV3Interface.json
+      eventHandlers:
+        - event: Deposited(indexed address,uint256,uint256)
+          handler: handleDeposited
+        - event: Withdrawn(indexed address,uint256,uint256)
+          handler: handleWithdrawn
+        - event: AssetWithdrawn(indexed address,uint256,indexed address,uint256)
+          handler: handleSingleAssetWithdrawn
+        - event: Swapped(indexed address,indexed address,indexed address,uint256,uint256,bytes)
+          handler: handleSwapped
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleTransfer
+      file: ./src/mapping.ts
+  - name: OldClipperCove
+    kind: ethereum/contract
+    network: arbitrum-one
+    source: 
+      address: '0x9e233dd6a90678baacd89c05ce5c48f43fcc106e'
+      abi: ClipperCove
+      startBlock: 31065917
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      entities:
+        - CoveSwapped
+        - CoveDeposited
+        - CoveWithdrawn
+      abis:
+        - name: ClipperCove
+          file: ./abis/ClipperCove.json
+        - name: ERC20
+          file: ./abis/ERC20.json
+        - name: AggregatorV3Interface
+          file: ./abis/AggregatorV3Interface.json
+        - name: ClipperDirectExchange
+          file: ./abis/ClipperDirectExchange.json
+      eventHandlers:
+        - event: CoveSwapped(indexed address,indexed address,indexed address,uint256,uint256,bytes32)
+          handler: handleCoveSwapped
+        - event: CoveDeposited(indexed address,indexed address,uint256,uint256)
+          handler: handleCoveDeposited
+        - event: CoveWithdrawn(indexed address,indexed address,uint256,uint256)
+          handler: handleCoveWithdrawn
+      file: ./src/coveMapping.ts
