Update dependencies for mainnet deployment

--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "deploy:moonbase": "graph deploy --node https://api.thegraph.com/deploy/ edoapp/clipper-moonbase-alpha --debug",
     "deploy:optimism": "graph deploy --node https://api.thegraph.com/deploy/ edoapp/clipper-optimism --debug",
     "deploy:moonbeam": "graph deploy --node https://api.thegraph.com/deploy/ edoapp/clipper-moonbeam --debug",
-    "deploy:ethereum": "graph deploy --node https://api.thegraph.com/deploy/ edoapp/clipper-mainnet --debug",
+    "deploy:ethereum": "graph deploy --node https://api.thegraph.com/deploy/ edoapp/clipper-mainnet",
     "deploy:arbitrum": "graph deploy --node https://api.thegraph.com/deploy/ edoapp/clipper-arbitrum --debug"
   },
   "dependencies": {
-    "@graphprotocol/graph-cli": "0.33.0",
-    "@graphprotocol/graph-ts": "0.27.0"
+    "@graphprotocol/graph-cli": "0.58.0",
+    "@graphprotocol/graph-ts": "0.31.0"
   },
   "devDependencies": {
     "@types/glob": "^7.2.0",
@@ -34,7 +34,7 @@
     "prettier": "^1.18.2",
     "rimraf": "^3.0.2",
     "ts-node": "^10.4.0",
-    "typescript": "^3.5.2",
+    "typescript": "^4.9.2",
     "yargs": "^17.3.1"
   }
 }
