new base deploy script

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "deploy:moonbeam": "graph deploy --node https://api.thegraph.com/deploy/ edoapp/clipper-moonbeam --debug",
     "deploy:ethereum": "graph deploy --node https://api.thegraph.com/deploy/ edoapp/clipper-mainnet --debug",
     "deploy:arbitrum": "graph deploy --node https://api.thegraph.com/deploy/ edoapp/clipper-arbitrum --debug",
-    "deploy:base": "graph deploy --node https://api.thegraph.com/deploy/ edoapp/clipper-base --debug"
+    "deploy:base": "graph deploy --studio cllipper-base"
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "0.21.0",
